# md2gemini

./: Makefile  README.md  pyproject.toml
