[project]
name = "md2gemini"
version = "1.9.1"
description = "Convert Markdown to the Gemini text format"
readme = "README.md"
license = "LGPL-3.0"
authors = [
    { name = "makeworld", email = "makeworld@protonmail.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "mistune>=2.0.0,<3",
    "cjkwrap",
    "wcwidth",
]

[project.scripts]
md2gemini = "md2gemini:main"

[project.urls]
Homepage = "https://github.com/makeworld-the-better-one/md2gemini"

[dependency-groups]
dev = [
    "pytest>=6.2.0",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
